# cunibs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: wheels.yml
src/cunibs/: __init__.py  coil.py  mesh.py  metrics.py  simulation.py
src/cunibs/adm/: __init__.py  evaluate.py  grid.py  optimize.py  place.py  reciprocity.py  target.py
src/cunibs/coils/: Deymed_120BFV.h5  Deymed_50BF.h5  Deymed_70BF.h5  MagMore_PMD25-decentral.h5  MagMore_PMD45-EEG.h5  MagMore_PMD70.h5  MagStim_D70.h5  MagStim_DCC.h5  MagVenture_C-100.h5  MagVenture_C-B60.h5  MagVenture_C-B70.h5  MagVenture_Cool-B35.h5  MagVenture_Cool-B65.h5  MagVenture_Cool-B70.h5  MagVenture_Cool-D-B80.h5  MagVenture_MC-125.h5  MagVenture_MC-125_new.h5  MagVenture_MC-B70.h5  MagVenture_MCF-75.h5  MagVenture_MCF-B65.h5  MagVenture_MCF-B65_new.h5  MagVenture_MC_B65_HO8.h5  MagVenture_MMC-140-II.h5  MagVenture_MRI-B91.h5  MagVenture_MST_Twin.h5
src/cunibs/fem/: __init__.py  assembly.py  placement.py  solve.py
src/cunibs/solver/: __init__.py  adm.cu  bindings.cpp  cast.cu  dadt.cu  dadt_element.cu  kernels.hpp  moments.cu  place.cu  reconstruct.cu  rhs.cu  solver.cpp  solver.hpp
src/cunibs/uq/: __init__.py
src/cunibs/uq/conductivity/: __init__.py  assembly.py  config.py  result.py  run.py
tests/: conftest.py  gpu.py  test_adm.py  test_coil.py  test_frontend.py  test_mesh.py  test_metrics.py  test_serialization.py  test_solver.py  test_uq.py
