[project]
name = "cunibs"
version = "0.1.0"
description = "GPU FEM solver for the TMS E-field"
readme = "README.md"
authors = [
    { name = "Sriman Achanta", email = "68172138+srimanachanta@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["scikit-build-core>=0.12"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.{h,c,hpp,cpp}" }, { file = "CMakeLists.txt" }]
