[project]
name = "cunibs"
version = "0.1.0"
description = "GPU FEM solver for the TMS E-field"
readme = "README.md"
keywords = [
    "transcranial magnetic stimulation",
    "TMS",
    "finite element method",
    "FEM",
    "CUDA",
    "GPU",
    "TMS simulation"
]
authors = [
    { name = "Sriman Achanta" }
]
requires-python = ">=3.12"
dependencies = [
    "cuda-toolkit[cudart,cublas,cusparse,cusolver]>=13.2",
    "cupy-cuda13x>=14.0.0",
    "h5py>=3.10.0",
    "numpy>=1.26.0",
]
license = "GPL-3.0-only"
license-files = ["LICENSE"]

[project.urls]
Repository = "https://github.com/vcubiomag/cunibs"

[build-system]
requires = [
    "scikit-build-core>=0.12",
    "nanobind>=2.13.0",
    "cuda-toolkit[nvcc,cudart,cccl,cublas,cusparse,cusolver,nvtx,curand]==13.2.*"
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
wheel.exclude = ["**.cpp", "**.cu", "**.hpp"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.{h,c,cu,hpp,cpp}" }, { file = "CMakeLists.txt" }]

[tool.ruff]
line-length = 96
target-version = "py312"
